testing fixed with dto implementation