@@ -11,16 +11,19 @@ import org.apache.log4j.*;
 import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.*;
 import org.mockito.*;
+import org.mockito.exceptions.misusing.*;
 import org.mockito.junit.jupiter.*;
 import org.mockito.quality.*;
+import org.modelmapper.*;
+import org.springframework.boot.autoconfigure.liquibase.*;
 
 import java.util.*;
+import java.util.stream.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@MockitoSettings(strictness = Strictness.LENIENT)
 public class ItemServiceImplTest {
 
     static Logger logger = Logger.getLogger(ItemServiceImplTest.class);
@@ -85,7 +88,6 @@ public class ItemServiceImplTest {
                 when(globalMapper.itemToItemDto(i)).thenReturn(mockDtoData.getItemDto());
             }
         });
-
         assertEquals(mockDtoData.getItemDto(), itemService.getItemById(id));
     }
 
@@ -104,27 +106,32 @@ public class ItemServiceImplTest {
 
     @Test
     public void getAllItemSize() {
-        List<ItemSize> itemSizes = Arrays.asList(mockData.getItemSize());
-        List<InventoryDetail> inventoryDetails = Arrays.asList(mockData.getInventoryDetail());
+        List<ItemSize> itemSizes = List.of(mockData.getItemSize());
+        List<ItemSizeDto> itemSizesDto = List.of(mockDtoData.getItemSizeDto());
+        List<InventoryDetail> inventoryDetails = List.of(mockData.getInventoryDetail());
         when(inventoryDetailDao.findAll()).thenReturn(inventoryDetails);
         when(itemDao.getAllItemSize(Constants.ACTIVE.getValue())).thenReturn(itemSizes);
-        assertEquals(itemSizes, itemService.getAllItemSize());
+        System.out.println(List.of(mockData.getItemSize()));
+        when(globalMapper.itemSizeToItemSizeDto(mockData.getItemSize())).thenReturn(mockDtoData.getItemSizeDto());
+        assertEquals(itemSizesDto, itemService.getAllItemSize());
     }
 
     @Test
     public void getItemSizeById() {
         Set<InventoryDetail> inventoryDetails = Set.of(mockData.getInventoryDetail());
-        List<ItemSize> itemSizes = Arrays.asList(mockData.getItemSize());
+        List<ItemSize> itemSizes= List.of(mockData.getItemSize());
+        itemSizes.forEach((size)-> when(globalMapper.itemSizeToItemSizeDto(size)).thenReturn(mockDtoData.getItemSizeDto()));
         int id = 1;
-        mockData.getItem().setInventory(inventoryDetails);
-        List<Item> itemList = Arrays.asList(mockData.getItem());
+        List<Item> itemList = List.of(mockData.getItem());
         itemList.forEach((i) -> {
             if (id == i.getItemId()) {
                 when(itemDao.findById(id)).thenReturn(Optional.of(i));
+                i.setInventory(inventoryDetails);
             }
         });
-        when(itemDao.getItemSizeById(Constants.ACTIVE.getValue(), id)).thenReturn((itemSizes));
-        assertEquals(itemSizes, itemService.getItemSizeById(id));
+
+        when(itemDao.getItemSizeById(Constants.ACTIVE.getValue(), id)).thenReturn(itemSizes);
+        assertEquals(List.of(mockDtoData.getItemSizeDto()), itemService.getItemSizeById(id));
     }
 
     @Test
